--- a/views/createProduct.ejs
+++ b/views/createProduct.ejs
@@ -10,17 +10,20 @@
 </head>
 <body>
 <div>
-    <div class="mt-20">
+    <div class="mt-6">
         <h3 class="text-center text-2xl tracking-tight mb-8 font-bold">Create Product</h3>
         <form action="/shop/product/create" method="post" enctype="multipart/form-data">
             <input class="block mx-auto p-2 border-2 border-black outline-none rounded-md" type="text" placeholder="Product name" name="name" required>
             <input class="block mx-auto mt-2 p-2 border-2 border-black outline-none rounded-md" type="text" placeholder="Product description" name="description" required>
+            <input class="block mx-auto mt-2 p-2 border-2 border-black outline-none rounded-md" type="number" placeholder="Max Retail Price(MRP)" name="mrp" required>
             <input class="block mx-auto mt-2 p-2 border-2 border-black outline-none rounded-md" type="number" placeholder="Product price" name="price" required>
             <input class="block mx-auto mt-2 p-2 border-2 border-black outline-none rounded-md" type="number" placeholder="Product stock" name="stock" required>
+            <input class="block mx-auto mt-2 p-2 border-2 border-black outline-none rounded-md" type="text" placeholder="Brand name" name="brand" required>
+            <input class="block mx-auto mt-2 p-2 border-2 border-black outline-none rounded-md" type="text" placeholder="Product gategory" name="category" required>
             <div class="mt-4 flex justify-center">
             <input type="file" name="productImage" required>
             </div>
-            <input class="block mx-auto mt-8 px-3 py-3 bg-yellow-600 text-white text-lg rounded-lg tracking-tight" type="submit" value="create product" required>
+            <input class="block mx-auto mt-8 px-3 py-3 bg-yellow-600 text-white text-lg rounded-lg tracking-tight" type="submit" value="Create Product" required>
         </form>
     </div>
 </div>
