--- a/views/partials/navbar2.ejs
+++ b/views/partials/navbar2.ejs
@@ -1,10 +1,10 @@
-<nav class="flex justify-between items-center h-14 p-2 tracking-tight text-white bg-slate-600">
+<nav class="flex justify-between items-center h-14 p-2 tracking-tight text-white bg-slate-600 md:px-8 md:h-24">
   <div>
-    <label class="text-2xl">
+    <label class="text-2xl md:text-5xl">
       <a href="/">Scatch</a>
     </label>
   </div>
-  <ul class="flex gap-3">
+  <ul class="flex gap-3 md:gap-8 md:text-3xl">
     <li>
       <a href="/shop">Shop</a>
     </li>
