--- a/views/adminProfile.ejs
+++ b/views/adminProfile.ejs
@@ -7,6 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/all.css">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/adminProfile.css">
 </head>
 <body>
     <hero>
@@ -18,13 +19,7 @@
                 <div>
                     <ul class="flex gap-3 text-sm">
                         <li>
-                            <a>Products</a>
-                        </li>
-                        <li>
-                            <a>Settings</a>
-                        </li>
-                        <li>
-                            <a class="text-red-600 font-[500]" href="/owner/logout">Logout</a>
+                            <a class="text-red-500 text-lg" href="/owner/logout">Logout</a>
                         </li>
                     </ul>
                 </div>
@@ -32,11 +27,26 @@
         </header>
         <div class="container">
             <div class="p-2 text-lg">
-                Welcome, <%= admin.name %>
+                <span>Welcome, </span><span id="admin-name"><%= admin.name %></span>
             </div>
             <div>
-                <div></div>
-                <div></div>
+                <div class="text-lg px-2">
+                    <p>Total Products: <%= allProducts.length %></p>
+                </div>
+                <div class="text-lg px-2">
+                    <p>Total Users: <%= allUsers.length %></p>
+                </div>
+                <div class="btn-container">
+                    <a href="/owner/product/create">
+                        <button>Create Product</button>
+                    </a>
+                    <a href="/owner/product/manage">
+                        <button>Manage Product</button>
+                    </a>
+                    <a href="/owner/manage-users">
+                        <button>Manage Users</button>
+                    </a>
+                </div>
             </div>
         </div>
     </hero>
