--- a/views/manageUsers.ejs
+++ b/views/manageUsers.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/all.css">
 </head>
 <body>
+    <%- include("./partials/adminNav") %>
 <div class="h-full w-full">
     <div class="mx-4">
         Users count: <%= allUsers.length %>
