--- a/views/editProduct.ejs
+++ b/views/editProduct.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scatch | Dashboard</title>
+    <title>Scatch | Edit Product</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/all.css">
     <link rel="stylesheet" href="/css/style.css">
@@ -12,10 +12,9 @@
     <%- include("./partials/adminNav") %>
 <div>
     <div class="mt-6">
-        <h3 class="text-center text-2xl tracking-tight mb-4 font-bold">Create Product</h3>
-        <form action="/shop/product/create" method="post" enctype="multipart/form-data">
-            <label class="text-lg px-5" for="name">Product Name</label>
-            <input id="name" class="block mx-auto p-2 border-2 border-black outline-none rounded-md" type="text" placeholder="Product name" name="name" required>
+        <h3 class="text-center text-2xl tracking-tight mb-4 font-bold">Edit Product</h3>
+        <form action="/shop/product/update" method="post" enctype="multipart/form-data">
+            <textarea class="resize-none" placeholder="<%= product.name %>"></textarea>
             
             <label class="text-lg px-5 inline-block mt-4" for="description">Product Description</label>
             <input id="description" class="block mx-auto p-2 border-2 border-black outline-none rounded-md" type="text" placeholder="Product description" name="description" required>
@@ -37,7 +36,7 @@
             <div class="mt-4 flex justify-center">
             <input type="file" name="productImage" required>
             </div>
-            <input class="block mx-auto mt-8 px-3 py-3 bg-blue-600 text-white text-lg rounded-lg tracking-tight" type="submit" value="Create Product" required>
+            <input class="block mx-auto mt-8 px-3 py-3 bg-yellow-600 text-white text-lg rounded-lg tracking-tight" type="submit" value="Update Product" required>
         </form>
     </div>
 </div>
