--- a/views/manageProducts.ejs
+++ b/views/manageProducts.ejs
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+  <%- include("./partials/adminNav") %>
     <div class="mb-10 md:mb-16">
       <h2 class="mt-3 mb-4 text-center text-2xl font-bold text-gray-800 md:mb-6 lg:text-3xl">Manage Products</h2>
     </div>
