Added edit products feature

--- a/views/products.ejs
+++ b/views/products.ejs
@@ -17,7 +17,7 @@
       <p class="mx-auto max-w-screen-md text-center text-gray-500 md:text-lg">Some text about store</p>
     </div>
 <div class="container flex flex-col">
-<% products.forEach((product)=>{ %>
+<% products.reverse().forEach((product)=>{ %>
     <div class="w-[85vw] bg-zinc-100 shadow-md shadow-zinc-400 rounded-lg mb-8 mx-auto">
         <div class="group relative block h-82 overflow-hidden rounded-t-lg bg-grey-100">
           <img class="h-40 w-auto object-contain mx-auto mt-2" src="data:image/png;base64,<%= product.image.toString('base64') %>" loading="lazy" alt="<%= product.name %>" class="h-full w-full object-contain object-center transition duration-200 group-hover:scale-110" />
@@ -34,9 +34,9 @@
           </div>
 
           <div class="flex flex-col items-end">
-            <span class="font-bold text-gray-600 lg:text-lg">$ <%= product.price %></span>
+            <span class="font-bold text-gray-600 lg:text-lg">$<%= product.price %></span>
               
-            <span class="text-sm text-red-500 line-through">$ <%= product.mrp %></span>
+            <span class="text-sm text-red-500 line-through">$<%= product.mrp %></span>
           </div>
         </div>
       
