--- a/views/editProduct.ejs
+++ b/views/editProduct.ejs
@@ -13,30 +13,34 @@
 <div>
     <div class="mt-6">
         <h3 class="text-center text-2xl tracking-tight mb-4 font-bold">Edit Product</h3>
-        <form action="/shop/product/update" method="post" enctype="multipart/form-data">
-            <textarea class="resize-none" placeholder="<%= product.name %>"></textarea>
+        <form action="/shop/update/<%= product._id %>" method="post">
+
+            <label class="text-lg px-5 inline-block mt-4" for="name">Product Name</label>
+            <input id="name" class="block mx-auto p-2 border-2 border-black outline-none rounded-md" type="text" placeholder="Product Name" name="name" value="<%= product.name %>" required>
             
             <label class="text-lg px-5 inline-block mt-4" for="description">Product Description</label>
-            <input id="description" class="block mx-auto p-2 border-2 border-black outline-none rounded-md" type="text" placeholder="Product description" name="description" required>
+            <input id="description" class="block mx-auto p-2 border-2 border-black outline-none rounded-md" type="text" placeholder="Product description" name="description" value="<%= product.description %>" required>
             
             <label class="text-lg px-5 inline-block mt-4" for="mrp">Product MRP</label>
-            <input id="mrp" class="block mx-auto p-2 border-2 border-black outline-none rounded-md" type="number" placeholder="Max Retail Price(MRP)" name="mrp" required>
+            <input id="mrp" class="block mx-auto p-2 border-2 border-black outline-none rounded-md" type="number" placeholder="Max Retail Price(MRP)" name="mrp" value="<%= product.mrp %>" required>
             
             <label class="text-lg px-5 inline-block mt-4" for="price">Product Price</label>
-            <input id="price" class="block mx-auto p-2 border-2 border-black outline-none rounded-md" type="number" placeholder="Product price" name="price" required>
+            <input id="price" class="block mx-auto p-2 border-2 border-black outline-none rounded-md" type="number" placeholder="Product price" name="price" value="<%= product.price %>" required>
             
             <label class="text-lg px-5 inline-block mt-4" for="stock">Product Stock</label>
-            <input id="stock" class="block mx-auto p-2 border-2 border-black outline-none rounded-md" type="number" placeholder="Product stock" name="stock" required>
+            <input id="stock" class="block mx-auto p-2 border-2 border-black outline-none rounded-md" type="number" placeholder="Product stock" name="stock" value="<%= product.stock %>" required>
             
             <label class="text-lg px-5 inline-block mt-4" for="brand">Brand Name</label>
-            <input id="brand" class="block mx-auto p-2 border-2 border-black outline-none rounded-md" type="text" placeholder="Brand name" name="brand" required>
+            <input id="brand" class="block mx-auto p-2 border-2 border-black outline-none rounded-md" type="text" placeholder="Brand name" name="brand" value="<%= product.brand %>" required>
             
             <label class="text-lg px-5 inline-block mt-4" for="category">Product Category</label>
-            <input id="category" class="block mx-auto p-2 border-2 border-black outline-none rounded-md" type="text" placeholder="Product gategory" name="category" required>
+            <input id="category" class="block mx-auto p-2 border-2 border-black outline-none rounded-md" type="text" placeholder="Product gategory" name="category" value="<%= product.category %>" required>
+            <!--
             <div class="mt-4 flex justify-center">
             <input type="file" name="productImage" required>
             </div>
-            <input class="block mx-auto mt-8 px-3 py-3 bg-yellow-600 text-white text-lg rounded-lg tracking-tight" type="submit" value="Update Product" required>
+            -->
+            <input class="block mx-auto mt-8 px-3 py-3 bg-yellow-600 text-white text-lg rounded-lg tracking-tight" type="submit" value="Update Product">
         </form>
     </div>
 </div>
